<resources>
    <string name="app_name">FortniteAwards</string>

    <string name="create_an_account">Create an Account</string>
    <string name="login">Sign in</string>
    <string name="signup">sign up</string>

    <string name="facebook_app_id">369346203869031</string>
    <string name="fb_login_protocol_scheme">fb369346203869031</string>

    <!-- For Sign-Up Layout-->
    <string name="full_name">Full Name</string>
    <string name="email">email</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_and_service">By creating an accout you agree to our Terms of Service and Privacy Policy</string>
    <string name="continue_button">Continue</string>
    <string name="already_have">Already have an account?</string>


    <!-- For Mother Layout-->
    <string name="your_point">v-points</string>
    <string name="settings">Settings</string>

    <!-- For Settings Layout -->
    <string name="account">Account</string>
    <string name="theme">Theme</string>
    <string name="support">Support</string>
    <string name="about">About</string>

    <!-- For Account Layout-->
    <string name="name">Name</string>
    <string name="change_setting">change account settings</string>
    <string name="save_changes">Save Changes</string>

    <!-- For Support Layout-->
    <string name="your_massege">Your Massege</string>
    <string name="send">Send</string>

    <!-- For Invite Layout-->
    <string name="invite_friend">Invite your friend
    you will get and your friend
    100 V-Points 3 dayily</string>

    <string name="your_link">Your Link</string>
    <string name="copy">Copy</string>

    <!-- For Wallet Layout-->
    <string name="save_the_world">Save The World</string>

    <!-- Top One Layout-->
    <string name="top_of_the_month">Top Of The Month</string>
    <string name="top_of_the_week">Top Of The Week</string>

    <!-- For About Layout-->
    <string name="about_us">asld;masjdbhjdscbsdjcndskjlcndsncvsdkjvndsnv
            kvjndskvndsklvds
            sdvnjdfkvndfvkldfv
            dfvdfmkvjkdfvjdfnvjkdfnvkjdfnvdfv
            dfvdfjbvdfkjvbdfvnfdklvmlkdfvd
            fvnkjdfvndfkjvn</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">CHANGE ME PLEASE</string>
    <string name="navigation_drawer_close">AND ME</string>
</resources>
