<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SettingFargment">


    <!-- Never Give Up-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginVertical="20dp"
                    android:layout_marginLeft="30dp"
                    android:src="@drawable/back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/settings"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/account_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="24dp"
                android:layout_marginBottom="45dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/setting_account" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="30dp"
                    android:paddingTop="25dp"
                    android:text="@string/account"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/theme_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="24dp"
                android:layout_marginBottom="45dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/setting_theme" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="30dp"
                    android:paddingTop="25dp"
                    android:text="@string/theme"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/support_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="36dp"
                android:layout_marginBottom="45dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/setting_support" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="30dp"
                    android:paddingTop="25dp"
                    android:text="@string/support"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/about_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="36dp"
                android:layout_marginBottom="45dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/setting_info" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="30dp"
                    android:paddingTop="25dp"
                    android:text="@string/about"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <!-- You Can Do It-->

</FrameLayout>