<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:src="@drawable/back"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:text="@string/invite_friend"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:src="@drawable/network"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="16dp"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:text="@string/your_link"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/textview_whiteborder">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="www.me.me.me.me.me.me.jo.com"
        android:inputType="text"/>
        <ImageView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/logo"/>
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/changesetting_back"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:textSize="24sp"
        android:textColor="@color/purple"
        android:text="@string/copy"/>

</LinearLayout>
</ScrollView>