<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/root_view_signin"
    android:background="#ffffff"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/loginTEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="100dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/login"
                android:transitionName="signIn"
                android:textSize="25sp" />


            <EditText
                android:id="@+id/email_signin"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/circular_boarder"
                android:drawableStart="@drawable/email"
                android:drawableLeft="@drawable/email"
                android:drawableTint="@color/colorPrimary"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black" />


            <EditText
                android:id="@+id/password_signin"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/circular_boarder"
                android:drawableStart="@drawable/password"
                android:drawableTint="@color/colorPrimary"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp">

                <Button

                    android:id="@+id/google_signin"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="54dp"
                    android:layout_marginLeft="54dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/google_sign_in" />

                <Button
                    android:id="@+id/fb_signin"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="48dp"
                    android:layout_marginRight="48dp"
                    android:background="@drawable/fb_sign_in"
                    android:gravity="center" />
            </RelativeLayout>

            <Button

                android:id="@+id/continue_signin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="96dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/circular_boarder"
                android:backgroundTint="@color/colorPrimary"
                android:padding="18dp"

                android:text="@string/continue_button"
                android:textColor="@android:color/white" />



        </LinearLayout>
    </ScrollView>



</LinearLayout>